--- a/css/mobile.css
+++ b/css/mobile.css
@@ -31,7 +31,7 @@ Librem 5/Pinephone etc.
     max-width: 100vw;
   }
 
-  .fullscreen .ui-dialog {
+  .fullscreen:not(.keyboard-shown) .ui-dialog {
     height: 100vh !important;
     max-height: unset !important;
   }
@@ -124,16 +124,8 @@ Librem 5/Pinephone etc.
 
 /* Long smartphone */
 @media screen and (max-width: 450px) and (max-height: 950px) {
-  .ui-dialog {
-    height: 91vh !important;
-  }
-
   .ui-dialog-content {
-    height: 77vh !important;
-  }
-
-  .fullscreen .ui-dialog-content {
-    height: 87vh !important;
+    height: 85vh !important;
   }
 
   #tag-group-assignment-section, #edit-tag-dialog tag-group-assignment-list {
@@ -141,7 +133,7 @@ Librem 5/Pinephone etc.
   }
 
   #info-popup.ui-dialog-content {
-    height: 83vh !important;
+    height: 91vh !important;
   }
 
   .book-list-column li {
@@ -176,15 +168,11 @@ Librem 5/Pinephone etc.
 
 /* Short smartphone */
 @media screen and (max-width: 450px) and (max-height: 740px) {
-  body:not(.keyboard-shown) .ui-dialog {
-    height: 89vh !important;
-  }
-
   body:not(.keyboard-shown) .ui-dialog-content {
-    height: 70vh !important;
+    height: 79vh !important;
   }
 
-  body:not(.keyboard-shown) .fullscreen .ui-dialog-content {
+  body:not(.keyboard-shown).fullscreen .ui-dialog-content {
     height: 82vh !important;
   }
 
@@ -194,7 +182,7 @@ Librem 5/Pinephone etc.
   }
 
   body:not(.keyboard-shown) #info-popup.ui-dialog-content {
-    height: 80vh !important;
+    height: 91vh !important;
   }
 
   body:not(.keyboard-shown) .book-list-column li {
@@ -246,7 +234,7 @@ Librem 5/Pinephone etc.
   }
 
   #book-selection-menu {
-    height: calc(100% - 3em);
+    height: 100vh;
     width: 97%;
     top: 0 !important;
     left: 0 !important;
@@ -464,10 +452,6 @@ Librem 5/Pinephone etc.
     margin: 0;
   }
 
-  .info-tabs {
-    height: calc(100% - 5em);
-  }
-
   #info-popup.ui-dialog-content {
     padding: 0.2em !important;
   }
@@ -603,7 +587,7 @@ Librem 5/Pinephone etc.
     position: absolute !important;
     top: 0 !important;
     width: 100%;
-    height: calc(100% - 1.5em);
+    height: 100vh;
     overflow-y: auto;
     border: unset !important;
     border-radius: unset !important;
@@ -655,7 +639,7 @@ Librem 5/Pinephone etc.
   /*Make dialogs not go out of screen*/
   .ui-dialog {
     max-width: 99vw !important;
-    max-height: 97vh !important;
+    height: 100vh !important;
   }
 
   #new-standard-tag-dialog, #edit-tag-dialog {
